welcome.lessons.welcome.array.basics.Array1.scala.code
override def run() {
var T=new Array[Color](getMondeHauteur())
for (i<-0 to getMondeHauteur()-1){
	 T(i)=getCouleurSol()
	 avance()
      }
      gauche()
      avance()
      droite()
for(i<-2 to getMondeLargeur()){
	for (j<-0 to getMondeHauteur()){
		setCouleurBrosse(T(j))
		BaisseBrosse()
		leveBrosse()
		avance()
 }
gauche()
      avance()
      droite() 
}
}